--- a/views/blog.jade
+++ b/views/blog.jade
@@ -4,6 +4,9 @@ html
   body
     h1= message
     form(action="", method="post")
+    .input
+        span.label user:
+        input(type="text" name="userid")
       .input
         span.label info: 
         input(type="text" name="info")
